hice el formulario y parte del index

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
     <Title>Ejercicio 1</Title>
 </head>
 <body>
-    <main>
-      <section>        
+    <main class="text-bg-danger p-3">
+      <section>
+        <h1 class="text-center"><ins>Adivina el numero aleatorio</ins></h1>
+        <p class="text-center">Hola Buenas ¿Como estas?, aqui comenzaremos a jugar al adivinador de numeros</p>  
+        <p class="text-center">Cuando aprete el boton comenzar, comenzara el  juego, arriba tendra que escribir un numero y le dira si atino al numero generado por la maquina, tiene hasta 10 intentos, que tenga muchisima suerte!!</p>  
+        <form>
+          <div class="mb-3">
+            <label for="numeross" class="form-label">Ingrese un Numero</label>
+            <input type="number" class="form-control" id="numeross" min="1" max="100">
+          </div>  
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
       </section>
     </main>
     <footer class="bg-dark text-white text-center py-4">
