--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         <p class="text-center">Cuando aprete el boton comenzar, comenzara el  juego, arriba tendra que escribir un numero y le dira si atino al numero generado por la maquina, tiene hasta 10 intentos, que tenga muchisima suerte!!</p>  
         <form>
           <div class="mb-3">
-            <label for="numeross" class="form-label">Ingrese un Numero</label>
-            <input type="number" class="form-control" id="numeross" min="1" max="100">
-          </div>  
-          <button type="submit" class="btn btn-primary">Enviar</button>
+            <label for="">Escribe un número entre el 1 y el 100</label>
+            <input type="number" placeholder="1-100" min="1" max="100" id="input" />
+            <button onclick="miFunc()">Enviar</button>
         </form>
       </section>
     </main>
@@ -30,6 +29,6 @@
       <p>&copy; Todos los derechos reservados</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+    <script src="js/ejercicio1.js"></script>
 </body>
 </html>
